--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "@tanstack/react-query": "^5.84.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.0",
+    "react-router": "^7.8.0",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
