--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-router": "^7.8.0",
     "vite-plugin-svgr": "^4.3.0"
   },
